--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">sritharjayakumar21@gmail.com</a></p>
+          <p><a href="mailto:sritharjayakumar21@gmail.com">sritharjayakumar21@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
